--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,11 @@ html, body{
   height: 25px;
   border-radius: 5px;
   margin: 3px;
-  width: 100%;
+  width: calc(100% - 2px);
+  border: 1px solid #d6d6d6;
+}
+.formulario input:focus{
+  border-color: #2da5da;
 }
 
 .btn-paga-aqui{
@@ -121,6 +125,7 @@ html, body{
   padding: 15px;
   border-radius: 5px;
   border: none;
+  cursor: pointer;
 }
 .img-pci{
   width: 200px;
@@ -134,8 +139,26 @@ html, body{
 
 .mensajeAdvertencia {
   color: #ff1a1a;
-  text-align: center;
-  padding-right: 80px;
+  text-align: left;
+  padding-left: 6px;
+  font-size: 11px;
 }
 
+.datos-card{
+  justify-content: space-between;
+  width: calc(100% - 10px);
+}
+.datos-card > div{
+  width: 30%;
+}
+
+.imagenes{
+  display: flex;
+  justify-content: center;
+}
+.centrar{
+  display: flex;
+  justify-content: center;
+  padding: 10px 30px;
+}
 
